...
        android:layout_height="113dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo" />

    <!-- Email or Phone TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/MyHintText"
        app:boxStrokeColor="@color/white">
...
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Submit Button -->
    <Button
        android:id="@+id/forgotpasswordSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
...
