...
                    android:maxLines="5"
                    android:text="Forgot Password or Login with OTP"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_button_bk"
                    android:maxLines="5"
...
